maze.randommouse.RandomMouseMaze.scala.error
Erreur de compilation :
RandomMouseMaze:8: error: ';' expected but 'if' found.
      case 2 => avance() if(!estFaceMur())
                         ^