maze.randommouse.RandomMouseMaze.scala.code
override def run() {
  var bis=0
  while(bis==0){
    random3() match{
      case 0 => droite()
      case 1 => left()
      case 2 => avance() if(!estFaceMur())
    }
    if(estSurBiscuit()){
      prendBiscuit()
      bis=1
    }
  }
}